# OpenGLold

./: CMakeLists.txt
include/: camera.hpp  shader.hpp
include/glad/: glad.h
lib/: glfw3.lib
src/: frag_shader.frag  glad.c  main.cpp  vert_shader.vert
src/shaders/: light_frag_shader.frag  light_vert_shader.vert  object_frag_shader.frag  object_vert_shader.vert
